[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "import-lib"
version = "0.2.7"
description = "Library for users wanting to integrate external data with SENERGY."
license = { text = "Apache License 2.0" }
authors = [
    { name = "InfAI (CC SES)" }
]
requires-python = ">=3.5.3"
dependencies = [
    "confluent_kafka",
    "rfc3339",
    "structlog @ git+https://github.com/SENERGY-Platform/python-structlog.git",
]
classifiers = [
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/SENERGY-Platform/import-lib"

[tool.setuptools.packages.find]
where = ["."]
